@@ -2,6 +2,7 @@ RocketShip Changelog
 
 05-23-2015 : version 1.3.1
 
+	- Added new password generator in 'rs' tool (use: ./rs -p yourpassword)
 	- Added 'fromPublic' method in HTML helper
 	- Added support for '/js' in public assets (looks for /javascript then /js)
 	- Added support for '/stylesheet' in public assets (looks for /css then /stylesheet)
